--- a/notebooks/analysis/player_specific/2025_06_15_gk_petrovic_2324.ipynb
+++ b/notebooks/analysis/player_specific/2025_06_15_gk_petrovic_2324.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 3,
       "metadata": {
         "id": "8VZCIU4k_JWE"
       },
@@ -92,14 +92,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YLyY4FVdM3SE",
-        "outputId": "89325889-5842-4ff5-f544-70e4f4401a65"
+        "outputId": "0837ac03-01df-4f19-bbb6-6baa42ea4962"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -121,14 +121,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 288
         },
         "id": "mxia7Yzl_KEW",
-        "outputId": "7f414673-bd33-40f3-c596-3271253989f1"
+        "outputId": "1d42f472-f048-4694-e501-01c2ad3c8ad7"
       },
       "outputs": [
         {
@@ -157,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5a906a9f-8520-4c9f-b8a8-f6faa2022830\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c5827258-ff58-471b-a28f-8e0b211370e1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -257,7 +257,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5a906a9f-8520-4c9f-b8a8-f6faa2022830')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5827258-ff58-471b-a28f-8e0b211370e1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -309,12 +309,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5a906a9f-8520-4c9f-b8a8-f6faa2022830 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c5827258-ff58-471b-a28f-8e0b211370e1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5a906a9f-8520-4c9f-b8a8-f6faa2022830');\n",
+              "        const element = document.querySelector('#df-c5827258-ff58-471b-a28f-8e0b211370e1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -334,8 +334,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b6aa141b-aa38-4a57-b0ac-e98bf546474f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b6aa141b-aa38-4a57-b0ac-e98bf546474f')\"\n",
+              "    <div id=\"df-7a450e2a-e1f7-44dc-9ecb-499aa81ed001\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7a450e2a-e1f7-44dc-9ecb-499aa81ed001')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -454,7 +454,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b6aa141b-aa38-4a57-b0ac-e98bf546474f button');\n",
+              "            document.querySelector('#df-7a450e2a-e1f7-44dc-9ecb-499aa81ed001 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -470,7 +470,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ],
       "source": [
@@ -490,9 +490,9 @@
           "height": 288
         },
         "id": "dHzaP0aNeNkA",
-        "outputId": "a56b41c7-34e2-49c3-b9ac-ce5f77d16f35"
+        "outputId": "c8b0ca44-46f5-4a99-8211-82c78687fe70"
       },
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +540,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2586362d-48ee-411c-b031-b125839d4b68\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4fb5bff6-9625-4376-9ba8-82488cf2452e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -733,7 +733,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2586362d-48ee-411c-b031-b125839d4b68')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4fb5bff6-9625-4376-9ba8-82488cf2452e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -785,12 +785,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2586362d-48ee-411c-b031-b125839d4b68 button.colab-df-convert');\n",
+              "        document.querySelector('#df-4fb5bff6-9625-4376-9ba8-82488cf2452e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2586362d-48ee-411c-b031-b125839d4b68');\n",
+              "        const element = document.querySelector('#df-4fb5bff6-9625-4376-9ba8-82488cf2452e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -810,8 +810,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-faefc4f9-47dd-48f2-8b97-054c313506e5\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-faefc4f9-47dd-48f2-8b97-054c313506e5')\"\n",
+              "    <div id=\"df-7624601c-f9bb-4371-9e16-3d12d1dc3693\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7624601c-f9bb-4371-9e16-3d12d1dc3693')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -930,7 +930,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-faefc4f9-47dd-48f2-8b97-054c313506e5 button');\n",
+              "            document.querySelector('#df-7624601c-f9bb-4371-9e16-3d12d1dc3693 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -946,7 +946,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 6
         }
       ]
     },
@@ -967,7 +967,7 @@
       "metadata": {
         "id": "g7k8ue4HeiFJ"
       },
-      "execution_count": 29,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -983,9 +983,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZYa1B9y7eaZQ",
-        "outputId": "74258420-2d2d-4e0f-c16b-5bc3ea4dd94a"
+        "outputId": "3dee76dd-ba82-458a-fb15-90deec8027a7"
       },
-      "execution_count": 31,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,7 +995,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 8
         }
       ]
     },
@@ -1010,9 +1010,9 @@
           "height": 170
         },
         "id": "QWgBFbH5fvzv",
-        "outputId": "046fa9d4-a9e8-4eb3-ff8c-05ba0a97eea1"
+        "outputId": "1025777f-86be-4f96-a4a5-f8eaf2d49f89"
       },
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1053,7 +1053,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-01e08560-6ad5-4bf6-8e51-8645a333677e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5ed59bca-c277-4253-8635-a7da2049b452\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1190,7 +1190,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-01e08560-6ad5-4bf6-8e51-8645a333677e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ed59bca-c277-4253-8635-a7da2049b452')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1242,12 +1242,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-01e08560-6ad5-4bf6-8e51-8645a333677e button.colab-df-convert');\n",
+              "        document.querySelector('#df-5ed59bca-c277-4253-8635-a7da2049b452 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-01e08560-6ad5-4bf6-8e51-8645a333677e');\n",
+              "        const element = document.querySelector('#df-5ed59bca-c277-4253-8635-a7da2049b452');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1276,7 +1276,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 9
         }
       ]
     },
@@ -1305,9 +1305,9 @@
           "height": 188
         },
         "id": "eYmekIAPfxlG",
-        "outputId": "8f3a1038-3920-4048-f7b0-14c4c2345f38"
+        "outputId": "7d4a6277-ba54-4d0f-a9ec-14492311649b"
       },
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1337,7 +1337,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-29b6106a-5835-4a9a-b5a2-545703e8765c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f8d2713a-3556-4e5a-9e58-e41300f6c836\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1412,7 +1412,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29b6106a-5835-4a9a-b5a2-545703e8765c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f8d2713a-3556-4e5a-9e58-e41300f6c836')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1464,12 +1464,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-29b6106a-5835-4a9a-b5a2-545703e8765c button.colab-df-convert');\n",
+              "        document.querySelector('#df-f8d2713a-3556-4e5a-9e58-e41300f6c836 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-29b6106a-5835-4a9a-b5a2-545703e8765c');\n",
+              "        const element = document.querySelector('#df-f8d2713a-3556-4e5a-9e58-e41300f6c836');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1498,7 +1498,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
     },
@@ -1524,9 +1524,9 @@
           "height": 170
         },
         "id": "UCIceHNMgO7S",
-        "outputId": "e342c68e-ec88-401a-9745-74ad6b3e3257"
+        "outputId": "7a9cc7b7-8cac-4385-8a7e-88424bb5c47c"
       },
-      "execution_count": 40,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1549,7 +1549,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b64a56fa-560d-4727-8c2d-e1212aaa3e9d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7f4eb71e-1488-4b81-82a8-81cf2012c311\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1626,7 +1626,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b64a56fa-560d-4727-8c2d-e1212aaa3e9d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7f4eb71e-1488-4b81-82a8-81cf2012c311')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1678,12 +1678,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b64a56fa-560d-4727-8c2d-e1212aaa3e9d button.colab-df-convert');\n",
+              "        document.querySelector('#df-7f4eb71e-1488-4b81-82a8-81cf2012c311 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b64a56fa-560d-4727-8c2d-e1212aaa3e9d');\n",
+              "        const element = document.querySelector('#df-7f4eb71e-1488-4b81-82a8-81cf2012c311');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1712,7 +1712,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 11
         }
       ]
     },
@@ -1731,9 +1731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_RmEpPZSgoFU",
-        "outputId": "59e94ad2-e378-452f-cfd6-a1876b54d2a8"
+        "outputId": "5972ddfe-09d5-44d3-ebfa-898ea5fb19be"
       },
-      "execution_count": 49,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1763,9 +1763,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cOhSTcM_hYCg",
-        "outputId": "71bd668f-d3f2-4c32-e6bf-ce9feb953f3b"
+        "outputId": "a574e2b8-e8e7-4214-b6e9-e9c55cdaed3b"
       },
-      "execution_count": 52,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1777,12 +1777,42 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xG = sum(df_petrovic_shots['xG'])\n",
+        "goals = sum(df_petrovic_shots['goal'])\n",
+        "ratio = (goals / xG) - 1\n",
+        "print(f'xG: {xG}')\n",
+        "print(f'goals: {goals}')\n",
+        "print(f'ratio: {ratio:.2%}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PmYOwLqirlu5",
+        "outputId": "9c13a443-8edd-4c83-d979-664a067c740a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "xG: 36.85000000000001\n",
+            "goals: 36\n",
+            "ratio: -2.31%\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhdrxjbv2Ux/z8kLRfJLXv",
+      "authorship_tag": "ABX9TyN6WqEQswb8i/MNh3Ko39ET",
       "include_colab_link": true
     },
     "kernelspec": {
